# please-rs

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md
.github/workflows/: build-all-platform.yml  build-all-platforms.yml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  install-windows.ps1  uninstall-windows.ps1
src/: get_current_shell.rs  main.rs  manage_last_command.rs
